--- a/Lab2.SmartProxy/Lab2.SmartProxy.csproj
+++ b/Lab2.SmartProxy/Lab2.SmartProxy.csproj
@@ -6,6 +6,8 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="DistributedResponseCachingMiddleware" Version="3.0.2" />
+        <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="5.0.1" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
     </ItemGroup>
 
