--- a/Lab2.SmartProxy/appsettings.json
+++ b/Lab2.SmartProxy/appsettings.json
@@ -7,5 +7,11 @@
     }
   },
   "AllowedHosts": "*",
-  "Urls": "https://localhost:9876;http://localhost:9875"
+  "Urls": "https://localhost:9876;http://localhost:9875",
+  "Proxy": {
+    "Nodes": [
+      "https://localhost:5001",
+      "https://localhost:5003"
+    ]
+  }
 }
