--- a/Lab2.SmartProxy/appsettings.json
+++ b/Lab2.SmartProxy/appsettings.json
@@ -13,5 +13,11 @@
       "https://localhost:5001",
       "https://localhost:5003"
     ]
+  },
+  "Cache": {
+    "MaxAge": 300
+  },
+  "Redis": {
+    "ConnectionString": "localhost"
   }
 }
