--- a/Lab2.Warehouse/Properties/launchSettings.json
+++ b/Lab2.Warehouse/Properties/launchSettings.json
@@ -15,7 +15,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "Lab2.Warehouse": {
+    "Lab2.Warehouse1": {
       "commandName": "Project",
       "dotnetRunMessages": "true",
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
@@ -27,6 +27,14 @@
       "commandName": "Project",
       "dotnetRunMessages": "true",
       "applicationUrl": "https://localhost:5003;http://localhost:5002",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      }
+    },
+    "Lab2.Warehouse3": {
+      "commandName": "Project",
+      "dotnetRunMessages": "true",
+      "applicationUrl": "https://localhost:5005;http://localhost:5004",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
