--- a/Lab2.Warehouse/Lab2.Warehouse.csproj
+++ b/Lab2.Warehouse/Lab2.Warehouse.csproj
@@ -15,7 +15,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Filters" />
+      <Folder Include="Application" />
     </ItemGroup>
 
     <ItemGroup>
